--- a/templates/views/405.hbs
+++ b/templates/views/405.hbs
@@ -1,17 +1,15 @@
 
-<hr class="featurette-divider">
+
    
     
- <div class="container">
+ <div class="container" style="max-width: 100%;">
         <div class="row justify-content-center">
-          <div class="col-md-6">
-            <div class="clearfix">
-              <h1 class="float-start display-3 me-4">404</h1>
+          <div class="col-md-6 w-75">
+           <div class="mb-5 mt-5">
+             <h1 class="float-start display-3 me-4">404</h1>
               <h4 class="pt-3">Χαθήκατε??</h4>
-              <img src="https://media.istockphoto.com/photos/end-of-road-picture-id537384505?k=20&m=537384505&s=612x612&w=0&h=7so1Up8mFJI9QEgWFtQ6d76fIx2nkRtL5QIoHmBItY4=" alt="">
-              <p class="text-medium-emphasis">Μεταβείτε στην <a href="/">Αρχική</a>.</p>
-            </div>
-          
+           </div>
+              <img src="/images/stopDoc.webp" style="max-width: 100%;">
           </div>
         </div>
       </div>
