--- a/templates/views/UsersList.hbs
+++ b/templates/views/UsersList.hbs
@@ -1,81 +1,98 @@
+<table id="myTable" class="display" style="">
+    <thead>
+        <tr>
+            <th>AMKA</th>
+            <th>Όνομα</th>
+            <th>Επίθετο</th>
+            <th>Χρήστης</th>
+            <th>Επεξεργασία</th>
+            <th>Διαγραφή</th>
 
-                      <table id="myTable" class="display" style="">
-                        <thead>
-                            <tr>
-                                <th>AMKA</th>
-                                <th>Όνομα</th>
-                                <th>Επίθετο</th>
-                                <th>Χρήστης</th>
-                                <th>Διαγραφή</th>
-                                
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>1</td>
-                                <td>Παππάς</td>
-                                <td>Μάριος</td>
-                                <td>Γραμματεία</td>
-                                <td> 
-                                  <svg class="nav-icon" style="width: 20px; height:20px;">
-                                  <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-trash"></use>
-                                </svg>
-                              </td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>Κωστας</td>
-                                <td>Λιβαθινος</td>
-                                <td>Γραμματεία</td>
-                                <td> 
-                                  <svg class="nav-icon" style="width: 20px; height:20px;">
-                                  <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-trash"></use>
-                                </svg>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td>3</td>
-                              <td>Μαρια</td>
-                              <td>Κοντού</td>
-                              <td>Γραμματεία</td>
-                              <td > 
-                                <svg class="nav-icon" style="width: 20px; height:20px;">
-                                <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-trash"></use>
-                              </svg>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td>4</td>
-                            <td>Δήμητρα</td>
-                            <td>Κοντού</td>
-                            <td>Γραμματεία</td>
-                            <td> 
-                              <svg class="nav-icon" style="width: 20px; height:20px;">
-                              <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-trash"></use>
-                            </svg>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>5</td>
-                          <td>Νίκος</td>
-                          <td>Ιωάννου</td>                         
-                          <td>Ιατρός</td>
-                          <td> 
-                            <svg class="nav-icon" style="width: 20px; height:20px;">
-                            <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-trash"></use>
-                          </svg>
-                        </td>
-                      </tr>
-                      <tr>
-                        <td>6</td>
-                        <td>Χρυσούλα</td>
-                        <td>Γίωτη</td>
-                        <td>Γραμματεία</td>
-                        <td> 
-                          <svg class="nav-icon" style="width: 20px; height:20px;">
-                          <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-trash"></use>
-                        </svg>
-                      </td>
-                    </tr>
-                        </tbody>
-                    </table>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each data}}
+        <tr>
+            <td>{{this.UserAmka}}</td>
+            <td>{{this.fname}}</td>
+            <td>{{this.lname}}</td>
+            <td>{{this.role}}</td>
+            {{!-- <td><button type="button" class="btn-close deleteuser" id="{{this._id}}" aria-label="Close"></button>
+            </td> --}}
+            {{!--
+            <td><button class=" deleteuser btn-close" id="{{this._id}}"></button></td> --}}
+
+            <td>
+                <a href="/edit/editUser/{{this._id}}"><button type="button" class="btn btn-info btn-sm">Επεξεργασία
+                        <span class="glyphicon glyphicon-edit"></span></button></a>
+            </td>
+            <td><button type="button" class="deleteuser btn btn-danger btn-sm" id="{{this._id}}">Διαγραφή <span
+                        class="glyphicon glyphicon-minus"></span></button>
+            </td>
+
+        </tr>
+
+        {{/each}}
+    </tbody>
+</table>
+
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script>
+    $(document).on('click', '.deleteuser', function (e) {
+        const id = e.target.id
+
+        var txt;
+        if (confirm("Εισαστε σίγουρος/η για την διαγραφή του χρήστη??")) {
+            txt = true;
+        } else {
+            txt = false;
+        }
+
+        if (txt) {
+            axios({
+                method: 'post',
+                url: 'deleteUser/' + id,
+                //params: {
+                //     :id
+                // }
+            }).then((response) => {
+
+                if (response) {
+
+                    window.location.reload();
+                }
+            })
+        }
+
+
+    })
+</script>
+
+
+
+{{#if error}}
+<script>
+    const myTimeout = setTimeout(myGreeting, 3000);
+
+    function myGreeting() {
+        $("#toast").hide()
+    }
+</script>
+
+<div class="justify-content-end mt-5" id="toast" style="display: flex;">
+
+    <div class="toast fade show bg-{{status}}" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <svg class="docs-placeholder-img rounded me-2" width="20" height="10" xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+
+            </svg><strong class="me-auto"></strong><small></small>
+            <button class="btn-close" id="btn-close" type="button" data-coreui-dismiss="toast"
+                aria-label="Close"></button>
+        </div>
+
+        {{!-- MESSAGE --}}
+        <div class="toast-body">{{message}}.</div>
+    </div>
+</div>
+{{/if}}
