--- a/templates/views/home.hbs
+++ b/templates/views/home.hbs
@@ -1,46 +1,84 @@
+<!-- BOXES -->
+<div class="row">
 
-              <!-- BOXES -->
-                <div class="row">
+  <!-- Εγγεγραμένοι Ασθενείς-->
+  <div class="col-sm-6 col-lg-5">
+    <div class="card mb-4 text-white bg-info">
+      <div class=" row card-body pb-0 d-flex justify-content-between align-items-start">
+        <div class="col">
+          <div class="fs-5 fw-semibold text-center">
+           Εγγεγραμένοι Ασθενείς : {{patients}}
+          </div>
+        
+        </div>
+        <hr>
+        <div class="row mb-3">
+          <div class=" col text-center">
+            <div class="col">
+              <u>Ηλικίες 18-25</u>
+            </div>
+            <div class="col">
+              {{Group18to25}}
+            </div>
+          </div>
 
-                        <!-- Εγγεγραμένοι Ασθενείς-->
-                            <div class="col-sm-6 col-lg-3">
-                              <div class="card mb-4 text-white bg-info">
-                                <div class="card-body pb-0 d-flex justify-content-between align-items-start">
-                                  <div>
-                                    <div class="fs-4 fw-semibold text-center">
-                                      30                            
-                                    </div>
-                                    <div>Εγγεγραμένοι Ασθενείς</div>
-                                  </div>
-                                  
-                                </div>
-                                <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-                                
-                                </div>
-                              </div>
-                            </div>
-                        <!--  Εγγεγραμένοι Ασθενείς-->
-                        
-                        <!--  Χρηστες-->
-                          <div class="col-sm-6 col-lg-3">
-                            <div class="card mb-4 text-white bg-warning">
-                              <div class="card-body pb-0 d-flex justify-content-between align-items-start">
-                                <div>
-                                    <div class="fs-4 fw-semibold text-center">
-                                      3
-                                      
-                                    </div>
-                                    <div>Ενεργοί Χρήστες</div>
-                                </div>
-                                
-                              </div>
-                              <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-                                
-                              </div>
-                            </div>
-                          </div>
-                        <!--  Χρηστες-->  
-                 
-                </div>
-              <!-- BOXES -->
-             
+          <div class="col text-center">
+            <div class="col">
+              <u>Ηλικίες 25-40</u>
+            </div>
+            <div class="col">
+              {{ Group25to40}}
+            </div>
+          </div>
+
+            <div class="col text-center">
+            <div class="col">
+              <u>Ηλικίες 40-65</u>
+            </div>
+            <div class="col">
+              {{ Group40to65}}
+            </div>
+          </div>
+
+            <div class="col text-center">
+            <div class="col">
+              <u>Ηλικίες 65+</u>
+            </div>
+            <div class="col">
+              {{ GroupOver65}}
+            </div>
+          </div>
+
+
+
+
+        </div>
+
+      </div>
+   
+    </div>
+  </div>
+  <!--  Εγγεγραμένοι Ασθενείς-->
+
+  <!--  Χρηστες-->
+  <div class="col-sm-6 col-lg-3">
+    <div class="card mb-4 text-white bg-warning">
+      <div class="card-body pb-0 d-flex justify-content-between align-items-start">
+        <div>
+          <div class="fs-5 fw-semibold text-center ">
+           Ενεργοί Χρήστες : {{users}}
+
+          </div>
+      
+        </div>
+
+      </div>
+      <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
+
+      </div>
+    </div>
+  </div>
+  <!--  Χρηστες-->
+
+</div>
+<!-- BOXES -->
