--- a/templates/views/emailAdd.hbs
+++ b/templates/views/emailAdd.hbs
@@ -54,7 +54,7 @@
 
 
                     <div class="col-md-4">
-                      <label class="form-label" for="streetName">Διεύθηνση</label>
+                      <label class="form-label" for="streetName">Διεύθυνση</label>
                       <input class="form-control" id="streetName" name="streetName" type="text" required="">
                     </div>
 
@@ -93,7 +93,7 @@
                     <div class="col-md-4">
                       <label class="form-label" for="validationDefaultEmail">Email</label>
                       <div class="input-group"><span class="input-group-text" id="inputGroupPrepend2">@</span>
-                        <input class="form-control" name="email" type="email" placeholder="email@email.gr">
+                        <input class="form-control" name="email" type="email"  required="">
                       </div>
                     </div>
 
