--- a/templates/views/viewPatient.hbs
+++ b/templates/views/viewPatient.hbs
@@ -82,7 +82,7 @@
 
 
                   <div class="col-md-4">
-                    <label class="form-label" for="streetName">Διεύθηνση</label>
+                    <label class="form-label" for="streetName">Διεύθυνση</label>
                     <input class="form-control" id="streetName" name="streetName" type="text" required=""
                       value="{{user.Address.streetName}}" readonly>
                   </div>
